# graphics_renderer

./: .travis.yml  CMakeLists.txt  README.md
docs/: memo.md
examples/: CMakeLists.txt  Ex1.cpp
include/: Geometry.hpp
src/: CMakeLists.txt  DataContainer.hpp  Mat.hpp  Utility.hpp  Vector.hpp
test/: CMakeLists.txt  TestDataContainer.cpp  TestVector.cpp
